--- a/template/src/styles.css
+++ b/template/src/styles.css
@@ -1,9 +1,9 @@
-.mg-15 {
-    margin-left: 15px;
-    margin-right: 15px;
+.question-input, .answer-input {
+    margin: 5px 15px;
+    vertical-align: middle;
 }
 
-.mg-5 {
+.relation-select {
     margin: 5px;
 }
 
@@ -77,7 +77,7 @@ role {
 }
 
 .highlight-trigger {
-    background-color: lightgoldenrodyellow;
+    background-color: rgb(250, 180, 0);
 }
 
 .highlight-role {
@@ -126,8 +126,4 @@ role {
 
 input[disabled] {
     color: #000
-}
-
-.question-input, .answer-input {
-    vertical-align: middle;
 }
